--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_sign_in"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.loginapp.SignInActivity"
+    tools:context="com.loginapp.HomeActivity"
     android:orientation="vertical"
     android:gravity="center">
 
